Begin Linking view to model
Added link from home -> all rings
Added loading table from database for all rings

--- a/Django/ringexplorer/web/templates/HomePage.html
+++ b/Django/ringexplorer/web/templates/HomePage.html
@@ -22,6 +22,8 @@
 					<div class="row text-black">
 						<div class="col-sm-10 offset-sm-1 text-center">
 							<h1 class="display-3">Ring Explorer Prototype</h1>
+							<br>
+							
 							<div class="info-form">
 								<form action="" class="form-inline justify-content-center">
 									<div class="form-group">
@@ -31,9 +33,9 @@
 									<button type="submit" class="btn btn-success ">Lookup Ring</button>
 								</form>
 							</div>
+							
 							<br>
-
-							<a href="#nav-main" class="btn btn-outline-secondary btn-sm" role="button">
+							<a href="allrings" class="btn btn-outline-secondary btn-sm" role="button">
 								Browse All Rings
 							</a>
 						</div>
