--- a/Django/ringexplorer/web/templates/AllRingsPage.html
+++ b/Django/ringexplorer/web/templates/AllRingsPage.html
@@ -22,7 +22,7 @@
 						Recent Rings
 					</h3>
 					
-					<table class="table">
+					<table class="table table-hover table-striped">
 					
 						<thead>
 							<tr>
@@ -30,35 +30,51 @@
 									Ring Index
 								</th>
 								<th>
+									Chain
+								</th>
+								<th>
 									Block Number
 								</th>
 								<th>
-									Miner Address
+									Time Stamp
 								</th>
 								<th>
 									Ring Hash
+								</th>
+								<th>
+									Miner Address
 								</th>
 							</tr>
 						</thead>
 						
-						<tbody>
-							<tr class="table-active">
-								<td>
-									Ring Index
-								</td>
-								<td>
-									Block Number
-								</td>
-								<td>
-									Miner Address
-								</td>
-								<td>
-									Ring Hash
-								</td>
-							</tr>
+						{% block content %}
+							{% for r in result %}
+							<tbody>
+								<tr class="table-active">
+									<td>
+										{{r.ringindex }}
+									</td>
+									<td>
+										{{ r.chain }}
+									</td>
+									<td>
+										{{ r.block }}
+									</td>
+									<td>
+										{{ r.timestamp }}
+									</td>
+									<td>
+										{{ r.ringhash }}
+									</td>
+									<td>
+										{{ r.mineraddress }}
+									</td>
+								</tr>
 
-							</tr>
-						</tbody>
+								</tr>
+							</tbody>
+							{% endfor %}
+						{% endblock %}
 						
 					</table>
 				</div>
