--- a/Django/ringexplorer/web/templates/HomePage.html
+++ b/Django/ringexplorer/web/templates/HomePage.html
@@ -23,10 +23,10 @@
 						<div class="col-sm-10 offset-sm-1 text-center">
 							<h1 class="display-3">Ring Explorer Prototype</h1>
 							<div class="info-form">
-								<form action="" class="form-inline justify-content-center">
+								<form method="GET" action="/ring/" class="form-inline justify-content-center">
 									<div class="form-group">
 										<label class="sr-only">Name</label>
-										<input type="text" class="form-control" placeholder="Ring Index">
+										{{form.ringindex}}
 									</div>
 									<button type="submit" class="btn btn-success ">Lookup Ring</button>
 								</form>
