--- a/Django/ringexplorer/web/templates/HomePage.html
+++ b/Django/ringexplorer/web/templates/HomePage.html
@@ -28,12 +28,12 @@
 										<label class="sr-only">Name</label>
 										{{form.ringindex}}
 									</div>
-									<button type="submit" class="btn btn-success ">Lookup Ring</button>
+									<button type="submit" class="btn btn-primary ">Lookup Ring</button>
 								</form>
 							</div>
 							<br>
 
-							<a href="allrings" class="btn btn-outline-secondary btn-sm" role="button">
+							<a href="allrings" class="btn btn-outline-primary btn-sm" role="button">
 								Browse All Rings
 							</a>
 						</div>
