--- a/Django/ringexplorer/web/templates/AllRingsPage.html
+++ b/Django/ringexplorer/web/templates/AllRingsPage.html
@@ -47,7 +47,7 @@
 			<div class="row">
 				<div class="col-md-12">
 					<h3 class="text-center">
-						Recent Rings
+						All Rings
 					</h3>
 					
 					<table class="table table-hover table-striped">
