Removed Miner Address from AllRings and Home

--- a/Django/ringexplorer/web/templates/RingBasic.html
+++ b/Django/ringexplorer/web/templates/RingBasic.html
@@ -75,6 +75,10 @@
 							<td>{{result.chain}}</td>
 						</tr>
 						<tr>
+						  <th>Time stamp</th>
+							<td>{{result.timestamp}}</td>
+						</tr>
+						<tr>
 						  <th>Block Number</th>
 							<td>{{result.block}}</td>
 						</tr>
@@ -248,7 +252,7 @@
 									
 									<tr>
 									  <th>Trade Rate</th>
-										<td>0</td>
+										<td>1 : {{result.rate3}}</td>
 									</tr>
 										
 									<tr>
