--- a/Django/ringexplorer/web/templates/RingBasic.html
+++ b/Django/ringexplorer/web/templates/RingBasic.html
@@ -99,7 +99,7 @@
 		  <li class="nav-item">
 			<a class="nav-link" id="order2-tab" data-toggle="tab" href="#order2" role="tab" aria-controls="order2" aria-selected="false">Order 2 Details</a>
 		  </li>
-		{% if result.ringsize == "3" %}
+		{% if result.ringsize >= "3" %}
 			  <li class="nav-item">
 				<a class="nav-link" id="order3-tab" data-toggle="tab" href="#order3" role="tab" aria-controls="order2" aria-selected="false">Order 3 Details</a>
 			  </li>
