--- a/Django/ringexplorer/web/templates/AllRingsPage.html
+++ b/Django/ringexplorer/web/templates/AllRingsPage.html
@@ -100,5 +100,35 @@
 				</div>
 			</div>
 		</div>
+	
+	<nav aria-label="All Rings Pagination">
+	  <ul class="pagination justify-content-center">
+	  
+		{% if result.has_previous %}
+		<li class="page-item">
+		  <a class="page-link" href="?page={{ result.previous_page_number }}">Previous</a>
+		</li>
+		{%else%}
+		<li class="page-item disabled">
+		  <a class="page-link" href="#" tabindex="-1">Previous</a>
+		</li>
+		{% endif %}
+		
+		<li class="page-item active">
+		  <a class="page-link" href="#">{{ result.number }} <span class="sr-only">(current)</span></a>
+		</li>
+
+		{% if result.has_next %}
+		<li class="page-item">
+		  <a class="page-link" href="?page={{ result.next_page_number }}">Next</a>
+		</li>
+		{%else%}
+		<li class="page-item disabled">
+		  <a class="page-link" href="#">Next</a>
+		</li>
+		{% endif %}
+	  </ul>
+	</nav>
+
   </body>
 </html>
