Updated branding to "Loop Explorer.io" from Ring Explorer Prototype

--- a/Django/ringexplorer/web/templates/HomePage.html
+++ b/Django/ringexplorer/web/templates/HomePage.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Ring Explorer</title>
+    <title>Loop Explorer</title>
 
-    <meta name="description" content="Prototype Ring Explorer">
+    <meta name="description" content="Prototype Loop Explorer">
     <meta name="author" content="Harnick Khera - Hephyrius">
 
     <link href= {% static "css/bootstrap.css" %} rel="stylesheet">
@@ -16,7 +16,7 @@
   </head>
   <body>
 		<nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
-		  <a class="navbar-brand">Ring Explorer</a>
+		  <a class="navbar-brand">LoopExplorer.io</a>
 
 		  <div class="collapse navbar-collapse" id="">
 			<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
@@ -47,7 +47,7 @@
 				<div class="vertical-center"
 					<div class="row text-black">
 						<div class="col-sm-10 offset-sm-1 text-center">
-							<h1 class="display-3">Ring Explorer Prototype V0.2</h1>
+							<h1 class="display-3">Loop Explorer</h1>
 							<div class="info-form">
 								<form method="GET" action="/ring/" class="form-inline justify-content-center">
 									<div class="form-group">
