--- a/Django/ringexplorer/web/templates/AllRingsPage.html
+++ b/Django/ringexplorer/web/templates/AllRingsPage.html
@@ -8,7 +8,7 @@
 
     <title>All Rings</title>
 
-    <meta name="description" content="Prototype Ring Explorer: All Rings">
+    <meta name="description" content="Loop Explorer: All Rings">
     <meta name="author" content="Harnick Khera - Hephyrius">
 
     <link href={% static "css/bootstrap.css" %} rel="stylesheet">
@@ -17,7 +17,7 @@
 	  <body>
 	  
 		<nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
-		  <a class="navbar-brand">Ring Explorer</a>
+		  <a class="navbar-brand">LoopExplorer.io</a>
 
 		  <div class="collapse navbar-collapse" id="">
 			<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
