--- a/Django/ringexplorer/web/templates/RingBasic.html
+++ b/Django/ringexplorer/web/templates/RingBasic.html
@@ -8,7 +8,7 @@
 
     <title>Ring Details</title>
 
-    <meta name="description" content="Prototype Ring Explorer: Ring Details">
+    <meta name="description" content="Prototype Loop Explorer: Ring Details">
     <meta name="author" content="Harnick Khera - Hephyrius">
 
     <link href= {% static "css/bootstrap.css" %} rel="stylesheet">
@@ -17,7 +17,7 @@
   <body>
   
 	<nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
-	  <a class="navbar-brand">Ring Explorer</a>
+	  <a class="navbar-brand">Loop Explorer</a>
 
 	  <div class="collapse navbar-collapse" id="">
 		<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
