--- a/Django/ringexplorer/web/templates/RingBasic.html
+++ b/Django/ringexplorer/web/templates/RingBasic.html
@@ -114,13 +114,32 @@
 						<table class="table table-hover table-striped">
 							<tbody>
 								<tr>
-								  <th>Address</th>
+								  <th>Miner Address</th>
 									<td>{{result.mineraddress}}</td>
 								</tr>
+								
 								<tr>
 								  <th>Total LRC Received</th>
+									<td>{{result.lrcFees}}</td>
+								</tr>
+								
+								<tr>
+								  <th>Total Token1 Received</th>
 									<td>0</td>
 								</tr>
+								
+								<tr>
+								  <th>Total Token2 Received</th>
+									<td>0</td>
+								</tr>
+								{% if result.ringsize >= "3" %}
+								
+								<tr>
+								  <th>Total Token3 Received</th>
+									<td>0</td>
+								</tr>
+								
+								{%endif%}
 							</tbody>
 						</table>
 					</div>
@@ -153,26 +172,30 @@
 									<td>1 : {{result.rate1}}</td>
 								</tr>
 								
+								{% if result.order1lrcFeeState > '0' %}
 								<tr>
-								  <th>Lrc Fee Total</th>
-									<td>{{result.order1lrcFeeState}}</td>
+								  <th>Lrc Paid as Fee</th>
+									<td>{{result.order11lrcFeeState}}</td>
 								</tr>
+								{% endif %}
 								
+								{% if result.order1lrcReward > '0' %}
 								<tr>
-								  <th>Lrc Reward Miner</th>
+								  <th>Lrc Reward</th>
 									<td>{{result.order1lrcReward}}</td>
 								</tr>
+								{% endif %}
 								
 								{% if result.order1splitS > '0' %}
 								<tr>
-								  <th>Token2 paid as Fee</th>
+								  <th>Sold Token used as fee</th>
 									<td>{{result.order1splitS}}</td>
 								</tr>
 								{% endif %}
 								
 								{% if result.order1splitB > '0' %}
 								<tr>
-								  <th>Token1 paid as Fee</th>
+								  <th>Purchased Token used as fee</th>
 									<td>{{result.order1splitB}}</td>
 								</tr>
 								{% endif %}
@@ -209,26 +232,30 @@
 									<td>1 : {{result.rate2}}</td>
 								</tr>
 								
+								{% if result.order2lrcFeeState > '0' %}
 								<tr>
-								  <th>Lrc Fee Total</th>
+								  <th>Lrc Paid as Fee</th>
 									<td>{{result.order2lrcFeeState}}</td>
 								</tr>
+								{% endif %}
 								
+								{% if result.order2lrcReward > '0' %}
 								<tr>
 								  <th>Lrc Reward Miner</th>
 									<td>{{result.order2lrcReward}}</td>
 								</tr>
+								{% endif %}
 								
 								{% if result.order2splitS > '0' %}
 								<tr>
-								  <th>Token1 paid as Fee</th>
+								  <th>Sold Token used as fee</th>
 									<td>{{result.order2splitS}}</td>
 								</tr>
 								{% endif %}
 								
 								{% if result.order2splitB > '0' %}
 								<tr>
-								  <th>Token2 paid as Fee</th>
+								  <th>Purchased Token used as fee</th>
 									<td>{{result.order2splitB}}</td>
 								</tr>
 								{% endif %}
@@ -263,26 +290,30 @@
 										<td>1 : {{result.rate3}}</td>
 									</tr>
 										
+									{% if result.order3lrcFeeState > '0' %}
 									<tr>
-									  <th>Lrc Fee Total</th>
-										<td>{{result.order3lrcFeeState}}</td>
+									  <th>Lrc Paid as Fee</th>
+										<td>{{result.order31lrcFeeState}}</td>
 									</tr>
+									{% endif %}
 									
+									{% if result.order3lrcReward > '0' %}
 									<tr>
-									  <th>Lrc Fee Miner</th>
-										<td>{{result.order2lrcReward}}</td>
+									  <th>Lrc Reward</th>
+										<td>{{result.order3lrcReward}}</td>
 									</tr>
+									{% endif %}
 									
 									{% if result.order3splitS > '0' %}
 									<tr>
-									  <th>Token1 paid as Fee</th>
+									  <th>Sold Token used as fee</th>
 										<td>{{result.order3splitS}}</td>
 									</tr>
 									{% endif %}
 									
 									{% if result.order3splitB > '0' %}
 									<tr>
-									  <th>Token2 paid as Fee</th>
+									  <th>Purchased Token used as fee</th>
 										<td>{{result.order3splitB}}</td>
 									</tr>
 									{% endif %}
