Updated Fee Page

--- a/Django/ringexplorer/web/templates/RingBasic.html
+++ b/Django/ringexplorer/web/templates/RingBasic.html
@@ -125,12 +125,12 @@
 								
 								<tr>
 								  <th>Total Token1 Received</th>
-									<td>0</td>
+									<td>{{result.order1splitB}}</td>
 								</tr>
 								
 								<tr>
 								  <th>Total Token2 Received</th>
-									<td>0</td>
+									<td>{{result.order2splitB}}</td>
 								</tr>
 								{% if result.ringsize >= "3" %}
 								
