--- a/Django/ringexplorer/web/templates/RingBasic.html
+++ b/Django/ringexplorer/web/templates/RingBasic.html
@@ -17,7 +17,7 @@
   <body>
   
 	<nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
-	  <a class="navbar-brand">Loop Explorer</a>
+	  <a class="navbar-brand">LoopExplorer.io</a>
 
 	  <div class="collapse navbar-collapse" id="">
 		<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
@@ -125,12 +125,12 @@
 								
 								<tr>
 								  <th>Total Token1 Received</th>
-									<td>{{result.order1splitB}}</td>
+									<td>{{result.token1Fees}}</td>
 								</tr>
 								
 								<tr>
 								  <th>Total Token2 Received</th>
-									<td>{{result.order2splitB}}</td>
+									<td>{{result.token2Fees}}</td>
 								</tr>
 								{% if result.ringsize >= "3" %}
 								
