--- a/Django/ringexplorer/web/templates/HomePage.html
+++ b/Django/ringexplorer/web/templates/HomePage.html
@@ -67,56 +67,58 @@
 		</div>
 	</section>
 	<section>
-		<h3 class="text-center">
-			Last 10 Rings
-		</h3>
-					
-		<table class="table table-hover table-striped">
-			<thead>
-				<tr>
-					<th>
-						Ring Index
-					</th>
-					<th>
-						Chain
-					</th>
-					<th>
-						Block Number
-					</th>
-					<th>
-						Time Stamp
-					</th>
-					<th>
-						Ring Hash
-					</th>
-				</tr>
-			</thead>
-			
-			{% block content %}
-				{% for r in result %}
-				<tbody>
-					<tr class="table-active">
-						<td>
-							<a href="http://localhost:8000/ring/?ringindex={{r.ringindex}}">{{r.ringindex }}</a>
-						</td>
-						<td>
-							{{ r.chain }}
-						</td>
-						<td>
-							{{ r.block }}
-						</td>
-						<td>
-							{{ r.timestamp }}
-						</td>
-						<td>
-							{{ r.ringhash }}
-						</td>
+		<div id="container" class="container">
+			<h3 class="text-center">
+				Last 10 Rings
+			</h3>
+						
+			<table class="table table-hover table-striped table-responsive">
+				<thead>
+					<tr>
+						<th>
+							Ring Index
+						</th>
+						<th>
+							Chain
+						</th>
+						<th>
+							Block Number
+						</th>
+						<th>
+							Time Stamp
+						</th>
+						<th>
+							Ring Hash
+						</th>
 					</tr>
-				</tbody>
-				{% endfor %}
-			{% endblock %}
-			
-		</table>
+				</thead>
+				
+				{% block content %}
+					{% for r in result %}
+					<tbody>
+						<tr class="table-active">
+							<td>
+								<a href="http://localhost:8000/ring/?ringindex={{r.ringindex}}">{{r.ringindex }}</a>
+							</td>
+							<td>
+								{{ r.chain }}
+							</td>
+							<td>
+								{{ r.block }}
+							</td>
+							<td>
+								{{ r.timestamp }}
+							</td>
+							<td>
+								{{ r.ringhash }}
+							</td>
+						</tr>
+					</tbody>
+					{% endfor %}
+				{% endblock %}
+		
+			</table>
+		</div>
 	</section>
   </body>
 </html>
