Improved responsive behaviour of navigation across all pages

--- a/Django/ringexplorer/web/templates/AllRingsPage.html
+++ b/Django/ringexplorer/web/templates/AllRingsPage.html
@@ -17,28 +17,26 @@
 	  <body>
 	  
 		<nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
-		  <a class="navbar-brand">LoopExplorer.io</a>
+		  <a class="navbar-brand" href="#">LoopExplorer.io</a>
+		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		  </button>
 
+		  <div class="collapse navbar-collapse" id="navbarToggle">
 			<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-			
-			  <li class="nav-item active">
-				<a class="nav-link" href="http://localhost:8000/">Home<span class="sr-only">(current)</span></a>
+			  <li class="nav-item">
+				<a class="nav-link" href="http://localhost:8000/">Home</a>
 			  </li>
-			  
-			  <li class="nav-item active">
+			  <li class="nav-item">
 				<a class="nav-link" href="http://localhost:8000/allrings/">View All Rings</a>
 			  </li>
-			  
 			</ul>
 			
-			<form method="GET" action="/ring/" class="form-inline justify-content-center">
-				<div class="form-group">
-					<label class="sr-only">Name</label>
-					{{form.ringindex}}
-				</div>
-				<button type="submit" class="btn btn-primary ">Lookup Ring</button>
+			<form method="GET" action="/ring/" class="form-inline my-2 my-lg-0">
+			  {{form.ringindex}}
+			  <button class="btn btn-primary my-2 my-sm-0" type="submit">Lookup Ring</button>
 			</form>
-
+		  </div>
 		</nav>
 		
 		<div class="container-fluid">
@@ -127,6 +125,9 @@
 		{% endif %}
 	  </ul>
 	</nav>
-
+	
+	<script src = {% static "js/jquery-3.3.1.js" %}></script>
+	<script src={% static "js/bootstrap.js" %}></script>
+	
   </body>
 </html>
