--- a/Django/ringexplorer/web/templates/HomePage.html
+++ b/Django/ringexplorer/web/templates/HomePage.html
@@ -68,9 +68,8 @@
 	</section>
 	<section>
 		<div id="container" class="container">
-			<h3 class="text-center">
-				Last 10 Rings
-			</h3>
+		
+			<h3 class="text-center"> Last 10 Rings </h3>
 						
 			<table class="table table-hover table-striped table-responsive">
 				<thead>
