--- a/Django/ringexplorer/web/templates/AllRingsPage.html
+++ b/Django/ringexplorer/web/templates/AllRingsPage.html
@@ -39,63 +39,59 @@
 		  </div>
 		</nav>
 		
-		<div class="container-fluid">
-			<div class="row">
-				<div class="col-md-12">
-					<h3 class="text-center">
-						All Rings
-					</h3>
+		<section>
+			<div id="container" class="container">
+				<h3 class="text-center">All Rings</h3>
+				
+				<table class="table table-hover table-striped table-responsive">
+				
+					<thead>
+						<tr>
+							<th>
+								Ring Index
+							</th>
+							<th>
+								Chain
+							</th>
+							<th>
+								Block Number
+							</th>
+							<th>
+								Time Stamp
+							</th>
+							<th>
+								Ring Hash
+							</th>
+						</tr>
+					</thead>
 					
-					<table class="table table-hover table-striped">
-					
-						<thead>
-							<tr>
-								<th>
-									Ring Index
-								</th>
-								<th>
-									Chain
-								</th>
-								<th>
-									Block Number
-								</th>
-								<th>
-									Time Stamp
-								</th>
-								<th>
-									Ring Hash
-								</th>
+					{% block content %}
+						{% for r in result %}
+						<tbody>
+							<tr class="table-active">
+								<td>
+									<a href="http://localhost:8000/ring/?ringindex={{r.ringindex}}">{{r.ringindex }}</a>
+								</td>
+								<td>
+									{{ r.chain }}
+								</td>
+								<td>
+									{{ r.block }}
+								</td>
+								<td>
+									{{ r.timestamp }}
+								</td>
+								<td>
+									{{ r.ringhash }}
+								</td>
 							</tr>
-						</thead>
-						
-						{% block content %}
-							{% for r in result %}
-							<tbody>
-								<tr class="table-active">
-									<td>
-										<a href="http://localhost:8000/ring/?ringindex={{r.ringindex}}">{{r.ringindex }}</a>
-									</td>
-									<td>
-										{{ r.chain }}
-									</td>
-									<td>
-										{{ r.block }}
-									</td>
-									<td>
-										{{ r.timestamp }}
-									</td>
-									<td>
-										{{ r.ringhash }}
-									</td>
-								</tr>
-							</tbody>
-							{% endfor %}
-						{% endblock %}
-						
-					</table>
-				</div>
+						</tbody>
+						{% endfor %}
+					{% endblock %}
+					
+				</table>
 			</div>
-		</div>
+		</section>
 	
 	<nav aria-label="All Rings Pagination">
 	  <ul class="pagination justify-content-center">
