--- a/Django/ringexplorer/web/templates/HomePage.html
+++ b/Django/ringexplorer/web/templates/HomePage.html
@@ -69,7 +69,7 @@
 	<section>
 		<div id="container" class="container">
 		
-			<h3 class="text-center"> Last 10 Rings </h3>
+			<h3 class="text-center"> Recent Rings </h3>
 						
 			<table class="table table-hover table-striped table-responsive">
 				<thead>
