Upgraded content for version 1.5.1 of protocol

--- a/Django/ringexplorer/web/templates/AllRingsPage.html
+++ b/Django/ringexplorer/web/templates/AllRingsPage.html
@@ -54,6 +54,9 @@
 								Chain
 							</th>
 							<th>
+								Protocol Version
+							</th>
+							<th>
 								Block Number
 							</th>
 							<th>
@@ -74,6 +77,9 @@
 								</td>
 								<td>
 									{{ r.chain }}
+								</td>
+								<td>
+								{{ r.version }}
 								</td>
 								<td>
 									{{ r.block }}
